--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
    <body>
       <!-- Main flex container -->
       <div class="flex-container">
+
          <!-- Side navigation bar -->
          <div class="side-nav-bar">
+
             <!-- Top side nvavigation bar -->
             <div class="side-nav-bar__top">
                <!-- Spotify logo -->
@@ -50,6 +52,7 @@
                   </a>
                </div>
             </div>
+
             <!-- Scrollable playlists -->
             <ul class="playlist-list">
                <li><a href="">Nome Playlist</a></li>
@@ -59,6 +62,7 @@
                <li><a href="">Nome Playlist</a></li>
                <li><a href="">Nome Playlist</a></li>
             </ul>
+
             <!-- User info -->
             <div class="side-nav-bar__bottom">
                <div id="install">
@@ -72,11 +76,13 @@
             </div>
          </div>
          <!-- /Side navigation bar -->
+
          <!-- Main body  -->
          <div class="main-content">
             <div class="top-layover">
                <a class="btn-round" href="">EFFETUA L'UPGRADE</a>
             </div>
+
             <!-- nav bar in main section  -->
             <ul class="nav-bar">
                <li>
@@ -98,6 +104,7 @@
                   <a href="">SCOPRI</a>
                </li>
             </ul>
+
             <!-- Songs section  -->
             <section class="section-container">
                <h2 class="section-title">Recently played</h2>
@@ -165,7 +172,8 @@
                </div>
             </section>
             <!-- /Songs section  -->
-            <!-- Mixes sectio -->
+
+            <!-- Mixes section -->
             <section class="section-container">
                <h2 class="section-title">Creato per John Doe</h2>
                <p class="section-subtitle">Più ascolti, più saranno accurati i suggerimenti. </p>
@@ -186,7 +194,7 @@
                   </div>
                </div>
             </section>
-            <!-- /Mixes sectio -->
+            <!-- /Mixes section -->
 
             <!-- Artist section -->
             <section class="section-container">
@@ -215,6 +223,7 @@
 
       <!-- Playing song controller -->
       <footer>
+
          <!-- Left part - song info -->
          <div class="display-song">
             <img src="img/sinister.jpeg" alt="">
@@ -228,6 +237,7 @@
             </div>
          </div>
          <!-- /Left side - song info -->
+
          <!-- Middle part - player controller -->
          <div class="display-player">
             <div class="display-player__icons">
@@ -248,6 +258,7 @@
             </div>
          </div>
          <!-- /Middle part - player controller -->
+
          <!-- Right part - audio controller -->
          <div class="display-volume">
             <i class="fas fa-list"></i>
@@ -260,6 +271,7 @@
             </div>
          </div>
          <!-- /Right part - audio controller -->
+         
       </footer>
       <!-- /Playing song controller -->
    </body>
